UPDATE: Login Logs

--- a/src/app/admin/audit/access-logs/access-logs.component.html
+++ b/src/app/admin/audit/access-logs/access-logs.component.html
@@ -102,13 +102,13 @@
         </tr>
         <tr [nzExpand]="expand.has(data['_id'])">
           <nz-descriptions nzSize="small" [nzColumn]="2">
-            <nz-descriptions-item nzTitle="HOST">{{ data.metadata.host }}</nz-descriptions-item>
-            <nz-descriptions-item nzTitle="COST">{{ data.data.cost }}ms</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="主机地址">{{ data.metadata.host }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="耗时">{{ data.data.cost }}ms</nz-descriptions-item>
             <nz-descriptions-item nzTitle="IP">{{ data.metadata.ip }}</nz-descriptions-item>
-            <nz-descriptions-item nzTitle="STATUS">{{ data.data.status }}</nz-descriptions-item>
-            <nz-descriptions-item nzTitle="QUERY" [nzSpan]="2">{{ data.data.query }}</nz-descriptions-item>
-            <nz-descriptions-item nzTitle="BODY" [nzSpan]="2">{{ data.data.body }}</nz-descriptions-item>
-            <nz-descriptions-item nzTitle="USER_AGENT" [nzSpan]="2">{{ data.data.user_agent }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="状态码">{{ data.data.status }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="Query 参数" [nzSpan]="2">{{ data.data.query }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="Body 请求体" [nzSpan]="2">{{ data.data.body }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="用户代理" [nzSpan]="2">{{ data.data.user_agent }}</nz-descriptions-item>
           </nz-descriptions>
         </tr>
       </ng-container>
