--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -16,15 +16,15 @@
               </li>
             </ul>
           </li>
-          <li nz-menu-group nzTitle="团队设置">
+          <li nz-menu-group nzTitle="组织架构">
             <ul>
               <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'orgs', 'roles']">
-                <span nz-icon nzType="apartment"></span>
+                <span nz-icon nzType="partition"></span>
                 <span>权限组</span>
               </li>
               <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'orgs', 'users']">
                 <span nz-icon nzType="team"></span>
-                <span>组织成员</span>
+                <span>团队成员</span>
               </li>
             </ul>
           </li>
