--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -32,25 +32,17 @@
               </li>
             </ul>
           </li>
-          <!--          <li nz-menu-group nzTitle="审计日志">-->
-          <!--            <ul>-->
-          <!--              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'audit', 'access_logs']">-->
-          <!--                <span nz-icon nzType="history"></span>-->
-          <!--                <span>操作记录</span>-->
-          <!--              </li>-->
-          <!--              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'audit', 'login_logs']">-->
-          <!--                <span nz-icon nzType="file-protect"></span>-->
-          <!--                <span>登录记录</span>-->
-          <!--              </li>-->
-          <!--            </ul>-->
-          <!--          </li>-->
           <li nz-menu-group nzTitle="监控">
             <ul>
-              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'sessions']">
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'monitor', 'values']">
+                <span nz-icon nzType="control"></span>
+                <span>动态配置</span>
+              </li>
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'monitor', 'sessions']">
                 <span nz-icon nzType="rocket"></span>
                 <span>在线会话</span>
               </li>
-              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'audit']">
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'monitor', 'audit']">
                 <span nz-icon nzType="file-protect"></span>
                 <span>审计日志</span>
               </li>
