--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -64,7 +64,7 @@
                   <button *nzSpaceItem nz-button nzType="text" nz-tooltip="简体中文">
                     <i nz-icon nzType="translation"></i>
                   </button>
-                  <button *nzSpaceItem nz-button nzType="text" nz-tooltip="个人中心" (click)="center()">
+                  <button *nzSpaceItem nz-button nzType="text" nz-tooltip="个人中心" (click)="profile()">
                     <i nz-icon nzType="user"></i>
                   </button>
                   <button *nzSpaceItem nz-button nzType="text" nz-tooltip="退出" (click)="logout()">
