--- a/src/app/admin/security/ip-list/ip-list.component.html
+++ b/src/app/admin/security/ip-list/ip-list.component.html
@@ -1,32 +1,16 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label>白名单</nz-form-label>
-    <nz-form-control formArrayName="ip_whitelist">
-      <ng-container *ngFor="let x of whitelist?.controls; index as i; first as isFirst">
+    <nz-form-label>IP 列表</nz-form-label>
+    <nz-form-control [formArrayName]="this.key">
+      <ng-container *ngFor="let x of list?.controls; index as i; first as isFirst">
         <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
           <input style="width: 90%" type="text" nz-input [formControlName]="i" placeholder="请输入 IP 地址" />
-          <button nz-button type="button" nzType="default" style="width: 10%" (click)="removeWhitelist(i)">
+          <button nz-button type="button" nzType="default" style="width: 10%" (click)="remove(i)">
             <i nz-icon nzType="minus-circle"></i>
           </button>
         </nz-input-group>
       </ng-container>
-      <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="addWhitelist()">
-        <i nz-icon nzType="plus-circle"></i> 新增地址
-      </button>
-    </nz-form-control>
-  </nz-form-item>
-  <nz-form-item>
-    <nz-form-label>黑名单</nz-form-label>
-    <nz-form-control formArrayName="ip_blacklist">
-      <ng-container *ngFor="let x of blacklist?.controls; index as i; first as isFirst">
-        <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
-          <input style="width: 90%" type="text" nz-input [formControlName]="i" placeholder="请输入 IP 地址" />
-          <button nz-button type="button" nzType="default" style="width: 10%" (click)="removeBlacklist(i)">
-            <i nz-icon nzType="minus-circle"></i>
-          </button>
-        </nz-input-group>
-      </ng-container>
-      <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="addBlacklist()">
+      <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="append()">
         <i nz-icon nzType="plus-circle"></i> 新增地址
       </button>
     </nz-form-control>
