--- a/src/app/admin/security/security.component.html
+++ b/src/app/admin/security/security.component.html
@@ -1,12 +1,12 @@
 <nz-card>
   <nz-tabset style="height: 100%" nzTabPosition="left">
-    <nz-tab nzTitle="安全性">
+    <nz-tab nzTitle="基础策略">
       <nz-list nzSize="large" nzItemLayout="vertical">
         <nz-list-item>
           <nz-list-item-meta>
             <nz-list-item-meta-title><b>会话超时策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
-              用户在 {{ data['session_ttl'] / 1e9 }} 秒内没有操作，退出当前帐号。
+              用户在 {{ values['session_ttl'] / 1e9 }} 秒内没有操作，退出当前帐号。
             </nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
@@ -19,7 +19,7 @@
           <nz-list-item-meta>
             <nz-list-item-meta-title><b>帐号锁定策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
-              用户连续登录失败 {{ data['login_failures'] }} 次， 锁定帐号 {{ data['login_ttl'] / 1e9 }} 秒。
+              用户连续登录失败 {{ values['login_failures'] }} 次， 锁定帐号 {{ values['login_ttl'] / 1e9 }} 秒。
             </nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
@@ -32,7 +32,7 @@
           <nz-list-item-meta>
             <nz-list-item-meta-title><b>IP 锁定策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
-              IP 连续 {{ data['ip_login_failures'] }} 次登录失败后（无白名单时启用），锁定 IP。
+              IP 连续 {{ values['ip_login_failures'] }} 次登录失败后（无白名单时启用），锁定 IP。
             </nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
@@ -43,38 +43,9 @@
         </nz-list-item>
         <nz-list-item>
           <nz-list-item-meta>
-            <nz-list-item-meta-title><b>IP 名单</b></nz-list-item-meta-title>
-          </nz-list-item-meta>
-          <nz-table style="width: 800px" #basicTable [nzData]="ipList" [nzHideOnSinglePage]="true">
-            <thead>
-              <tr>
-                <th nzWidth="200px"><b>种类</b></th>
-                <th><b>IP 地址</b></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of basicTable.data">
-                <td>
-                  <ng-container [ngSwitch]="item.type">
-                    <ng-container *ngSwitchCase="'white'">白名单</ng-container>
-                    <ng-container *ngSwitchCase="'black'">黑名单</ng-container>
-                  </ng-container>
-                </td>
-                <td>{{ item.value }}</td>
-              </tr>
-            </tbody>
-          </nz-table>
-          <nz-list-item-extra>
-            <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setIpList()">
-              <i nz-icon nzType="tool"></i>
-            </button>
-          </nz-list-item-extra>
-        </nz-list-item>
-        <nz-list-item>
-          <nz-list-item-meta>
             <nz-list-item-meta-title><b>密码强度策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
-              <ng-container [ngSwitch]="data['pwd_strategy']">
+              <ng-container [ngSwitch]="values['pwd_strategy']">
                 <ng-container *ngSwitchCase="0"> 无限制。 </ng-container>
                 <ng-container *ngSwitchCase="1"> 需要大写字母和小写字母。 </ng-container>
                 <ng-container *ngSwitchCase="2"> 需要大写字母、小写字母和数字。 </ng-container>
@@ -92,9 +63,9 @@
           <nz-list-item-meta>
             <nz-list-item-meta-title><b>密码有效期策略</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
-              <ng-container *ngIf="data['pwd_ttl'] === 0; else passwordExpire"> 永久有效 </ng-container>
+              <ng-container *ngIf="values['pwd_ttl'] === 0; else passwordExpire"> 永久有效 </ng-container>
               <ng-template #passwordExpire>
-                {{ data['pwd_ttl'] / 86400e9 }} 天后密码过期，系统强制要求修改密码。
+                {{ values['pwd_ttl'] / 86400e9 }} 天后密码过期，系统强制要求修改密码。
               </ng-template>
             </nz-list-item-meta-description>
           </nz-list-item-meta>
@@ -106,7 +77,51 @@
         </nz-list-item>
       </nz-list>
     </nz-tab>
-    <nz-tab nzTitle="云平台">Content of Tab Pane 2</nz-tab>
-    <nz-tab nzTitle="企业办公">Content of Tab Pane 3</nz-tab>
+    <nz-tab nzTitle="IP 白名单">
+      <nz-table
+        style="width: 800px"
+        #whitelist
+        [nzData]="values['ip_whitelist']"
+        [nzHideOnSinglePage]="true"
+        [nzFooter]="whitelistActions"
+      >
+        <thead>
+          <tr>
+            <th><b>IP 地址</b></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let data of whitelist.data">
+            <td>{{ data }}</td>
+          </tr>
+        </tbody>
+      </nz-table>
+      <ng-template #whitelistActions>
+        <button nz-button nzType="text" nzBlock (click)="setIpList('ip_whitelist')">编辑</button>
+      </ng-template>
+    </nz-tab>
+    <nz-tab nzTitle="IP 黑名单">
+      <nz-table
+        style="width: 800px"
+        #blacklist
+        [nzData]="values['ip_blacklist']"
+        [nzHideOnSinglePage]="true"
+        [nzFooter]="blacklistActions"
+      >
+        <thead>
+          <tr>
+            <th><b>IP 地址</b></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let data of blacklist.data">
+            <td>{{ data }}</td>
+          </tr>
+        </tbody>
+      </nz-table>
+      <ng-template #blacklistActions>
+        <button nz-button nzType="text" nzBlock (click)="setIpList('ip_blacklist')">编辑</button>
+      </ng-template>
+    </nz-tab>
   </nz-tabset>
 </nz-card>
