--- a/src/app/common/profile/profile.component.html
+++ b/src/app/common/profile/profile.component.html
@@ -167,14 +167,14 @@
               <nz-avatar
                 nzShape="square"
                 nzSize="large"
-                [nzSrc]="['assets', 'office', 'work-weixin.png'] | wpxAssets"
+                [nzSrc]="['assets', 'office', 'feishu.png'] | wpxAssets"
               ></nz-avatar>
             </nz-list-item-meta-avatar>
-            <nz-list-item-meta-title><b>企业微信</b></nz-list-item-meta-title>
-            <nz-list-item-meta-description>当前未绑定企业微信账号</nz-list-item-meta-description>
+            <nz-list-item-meta-title><b>飞书</b></nz-list-item-meta-title>
+            <nz-list-item-meta-description>当前未绑定飞书账号</nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
-            <button nz-button nzType="link" disabled> 关联 </button>
+            <button nz-button nzType="link" (click)="linkFeishu()"> 关联 </button>
           </nz-list-item-extra>
         </nz-list-item>
         <nz-list-item>
@@ -183,11 +183,11 @@
               <nz-avatar
                 nzShape="square"
                 nzSize="large"
-                [nzSrc]="['assets', 'office', 'feishu.png'] | wpxAssets"
+                [nzSrc]="['assets', 'office', 'work-weixin.png'] | wpxAssets"
               ></nz-avatar>
             </nz-list-item-meta-avatar>
-            <nz-list-item-meta-title><b>飞书</b></nz-list-item-meta-title>
-            <nz-list-item-meta-description>当前未绑定飞书账号</nz-list-item-meta-description>
+            <nz-list-item-meta-title><b>企业微信</b></nz-list-item-meta-title>
+            <nz-list-item-meta-description>当前未绑定企业微信账号</nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
             <button nz-button nzType="link" disabled> 关联 </button>
