--- a/src/app/common/profile/profile.component.html
+++ b/src/app/common/profile/profile.component.html
@@ -171,10 +171,29 @@
               ></nz-avatar>
             </nz-list-item-meta-avatar>
             <nz-list-item-meta-title><b>飞书</b></nz-list-item-meta-title>
-            <nz-list-item-meta-description>当前未绑定飞书账号</nz-list-item-meta-description>
+            <nz-list-item-meta-description *ngIf="!app.user?.feishu">当前未绑定飞书账号</nz-list-item-meta-description>
           </nz-list-item-meta>
+          <nz-descriptions *ngIf="app.user?.feishu as feishu" nzSize="small" nzBordered [nzColumn]="2">
+            <nz-descriptions-item nzTitle="用户姓名">{{ feishu.name }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="用户英文名称">{{ feishu.en_name | nzSafeNull: '-' }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="用户在应用内的唯一标识">{{ feishu.open_id }}</nz-descriptions-item>
+          </nz-descriptions>
           <nz-list-item-extra>
-            <button nz-button nzType="link" (click)="linkFeishu()"> 关联 </button>
+            <ng-container *ngIf="app.user?.feishu; else linkFeishuTpl">
+              <button
+                nz-button
+                nzType="link"
+                nz-popconfirm
+                nzPopconfirmTitle="您确定要取消该关联吗？"
+                nzPopconfirmPlacement="bottom"
+                (nzOnConfirm)="unlinkFeishu()"
+              >
+                取消关联
+              </button>
+            </ng-container>
+            <ng-template #linkFeishuTpl>
+              <button nz-button nzType="link" (click)="linkFeishu()">关联</button>
+            </ng-template>
           </nz-list-item-extra>
         </nz-list-item>
         <nz-list-item>
